# eva_stitcher_minimal

./: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
.github/: copilot-instructions.md
.github/agents/: Thinking-Beast-Mode.agent.md  askme.agent.md  context-architect.agent.md  context7.agent.md  critical-thinking.agent.md  gpt-5-beast-mode.agent.md  prompt-builder.agent.md  swe-subagent.agent.md  task-planner.agent.md  task-researcher.agent.md
.github/instructions/: code-review.instructions.md  context7.instructions.md  self-explanatory-code-commenting.instructions.md  terminal-rules.instructions.md
android/: .gitignore  opencv  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  canvas.h  engine.h  navigation.cpp  stitcher_jni.cpp  types.h
docs/: ARCore_blur_rejection.md  Avoid_seams_with_tiling.md  CameraX_1.5_features.md  Chunked_canvas_implementation_details.md  GPU_CPU_Readback.md  High_overlap_tracking_strategies.md  PLAN_ARCH.md  Tiny_chunks_canvas.md  camera_characteristics.md  material_theme_guide.md  slider-ticks.md
docs/claude-plan-stitching-v3/: 01_MVP_Plan.md  02_Future_Plan.md  03_Architecture.md  04_V2_to_V3_Changes.md
lib/: app_theme.dart  camera_control.dart  main.dart
lib/camera/: camera_callbacks.dart  camera_control.dart  camera_settings_dumper.dart  camera_settings_queue.dart  camera_state.dart  latest_value_sender.dart
lib/stitcher/: stitch_state.dart
lib/theme/: material_theme_salmon.dart  (+1 more)
scripts/: ecc_preprocess_experiment.py
test/: widget_test.dart
(+51 files in other folders)
